# filo

./: .gitignore  ExampleDataSeries.ipynb  ExampleSeries.ipynb  README.md  setup.cfg  setup.py
data/: FileSeries_Info.txt
filo/: __init__.py  analysis.py  formatters.py  general.py  parameters.py  readers.py  results.py  series.py  viewers.py
tests/: test_filo.py
